Button to navigate

--- a/webpages/index.html
+++ b/webpages/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Hello, Rocket!</h1>
     <p>Welcome to my Rocket-powered webpage!</p>
+    <a href="/static">Hello World</a>
 </body>
 </html>
